# rxbyak

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  instructions.txt  xbyak-differences.txt
examples/: bf.rs  calc.rs  calc2.rs  cputopology.rs  jmp_table.rs  memfunc.rs  profiler.rs  protect_re.rs  quantize.rs  stackframe.rs  static_buf.rs  test0.rs  test_util.rs  toyvm.rs
src/: address.rs  assembler.rs  code_array.rs  encode.rs  encoding_flags.rs  error.rs  label.rs  lib.rs  mnemonic.rs  operand.rs  reg.rs
src/platform/: mod.rs  unix.rs  windows.rs
src/util/: clock.rs  cpu.rs  mod.rs  stack_frame.rs  topology.rs
tests/: basic.rs  error_tests.rs  generated.rs  nasm_address.rs  nasm_avx512.rs  nasm_basic.rs  nasm_simd.rs  nm_avx.rs  nm_avx512.rs  nm_fpu.rs  nm_gpr.rs  nm_misc.rs  nm_sse.rs  simd.rs  stack_frame.rs
tests/common/: mod.rs
